<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <dependencies>
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>2.3.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.8.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.12</version>
        </dependency>
        <dependency>
            <groupId>org.alindner.cish</groupId>
            <artifactId>extension</artifactId>
            <version>v0.3.6</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <parent>
        <artifactId>cish</artifactId>
        <groupId>org.alindner.cish</groupId>
        <version>v0.3.6</version>
    </parent>
    <artifactId>compiler</artifactId>


    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>
    <build>
        <plugins>

            <plugin>
                <groupId>com.helger.maven</groupId>
                <artifactId>ph-javacc-maven-plugin</artifactId>
                <version>4.1.4</version>
                <executions>
                    <execution>
                        <id>jjc1</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>javacc</goal>
                        </goals>
                        <configuration>
                            <jdkVersion>1.8</jdkVersion>
                            <javadocFriendlyComments>true</javadocFriendlyComments>
                            <packageName>org.alindner.cish.compiler.precompiler.jj</packageName>
                            <sourceDirectory>src/main/java/org/alindner/cish/compiler/precompiler/jj/</sourceDirectory>
                            <outputDirectory>${project.build.directory}/generated-sources/compiler</outputDirectory>
                        </configuration>
                    </execution>
                    <!--                    <execution>-->
                    <!--                        <id>jjt1</id>-->
                    <!--                        <phase>generate-sources</phase>-->
                    <!--                        <goals>-->
                    <!--                            <goal>jjtree-javacc</goal>-->
                    <!--                        </goals>-->
                    <!--                        <configuration>-->
                    <!--                            <jdkVersion>1.5</jdkVersion>-->
                    <!--                            <javadocFriendlyComments>true</javadocFriendlyComments>-->
                    <!--                            <packageName>org.alindner.cish.compiler</packageName>-->
                    <!--                            <sourceDirectory>src/main/java/org/alindner/cish/compiler/</sourceDirectory>-->
                    <!--                            <excludes>-->
                    <!--                                <exclude>**/parser/**</exclude>-->
                    <!--                            </excludes>-->
                    <!--                            <outputDirectory>${project.build.directory}/generated-sources/jjtree1</outputDirectory>-->
                    <!--                        </configuration>-->
                    <!--                    </execution>-->
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>